--- a/index.html
+++ b/index.html
@@ -1,40 +1,281 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
-		<title>reveal.js</title>
+    <title>reveal.js</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+    <link rel="stylesheet" href="dist/reset.css" />
+    <link rel="stylesheet" href="dist/reveal.css" />
+    <link rel="stylesheet" href="dist/theme/black.css" />
+    <link rel="stylesheet" href="dist/cool.css" />
 
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+    <!-- Theme used for syntax highlighted code -->
+    <link rel="stylesheet" href="plugin/highlight/monokai.css" />
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+        <section><h1>NixOS Intro</h1></section>
+        <section>
+          <h3>$ whomai</h3>
+          <ul>
+            <li>Felix Ulonska (Jabbi) er/ihm</li>
+            <li>Aktuell: Computer Science Master Bonn</li>
+            <li>$dev @ devsaur</li>
+            <li>verwende NixOS seit etwa 1 Jahr</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Naming is easy</h3>
+          <img
+            style="height: 500px"
+            src="https://preview.redd.it/cg6rhnnw9b581.png?width=960&crop=smart&auto=webp&s=347854ad05d48b254db9a69db9a918e524a22095"
+          />
+        </section>
+        <section>
+          <section>
+            <h3>Wie man bisher Packages macht</h3>
+            <div class="center">
+              <!--img
+                style="position: absolute"
+                src="assets/Screenshot from 2022-12-18 22-28-59.png"
+              /-->
+              <!-- Lädt dependencies runter parallel in die Graphik integregireen-->
+              <img
+                style="position: absolute; x: -100px"
+                src="assets/packaging_old.svg"
+              />
+              <img class="fragment" src="assets/meme_versionen.jpg" />
+            </div>
+          </section>
+          <section>
+            <h3>In Nix</h3>
+            <div class="center">
+              <img src="assets/nix-version.png" />
+            </div>
+          </section>
+          <section>
+            <ul>
+              <li>Build-Funktion ist determinitisch™:<ul>
+                  <li>Internetverbindung deaktiviert</li>
+                  <li>Die Umgebungsvariablen $HOME und $PATH sind auf bestimmte Werte festgelegt</li>
+                  <li>Der Build-Ornder ist ein temporäres Verzeichnis.</li>
+                  <li>Der Zeitstempel für den Build-Ausgabepfad wird auf 1-1-1970 zurückgesetzt.</li>
+                </ul>
+                <li>Stellt reproduzierbaren Output sicher</li>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3><code>Nix Store</code></h3>
+            <ul>
+              <li>in <code>/nix/store</code> liegen alle Paket und Build-Artifakte</li>
+              <li><small><code>/nix/store/38in4n9cz6alhyc0hbb7g2yfsg7cgf8q-firefox-107.0</code></small></li>
+              <li><code>/nix/store</code> ist read-only (immuntabile)</li>
+              <li>Da Pakete deterministisch => Zwischen Hosts kopierbar</li>
+              <li>Falls Paket auf andere Pakete aufbaut mit kopiert werden</li>
+            </ul>
+          </section>
+        </section>
+        <section>
+          <section>
+            <h3>Enough Nix Lang to be dangorous</h3>
+            <ul>
+              <li class="fragment">
+                Lazy
+                <pre><code>let
+  a = abort "will never happen";
+  b = "hello";
+  c = "world";
+in b + c</code></pre>
+              </li>
+              <li class="fragment">
+                Pure:<br />
+                Es gibt keine Seiteneffekt: Output einer Funktion hängt nur vom
+                Input ab
+              </li>
+              <li class="fragment">Functional</li>
+              <li class="fragment">
+                Syntax: JSONs und Haskell gemeinsames Kind
+              </li>
+            </ul>
+          </section>
+          <section>
+            Datentypen
+            <pre><code data-line-numbers="1|2-4|5|6|7">let a = rec { 
+    myString = "Hallo Warpzone";
+    myNumber = 12;
+    myPath = ./cooleConfig; # Relativer Pfad
+    githubLink = github:NixOS/nixpkgs;
+    myList = [ 1 myPath ./einAndereDatei "Anderes Element"];
+}
+in a.myList</code></pre>
+            <pre><code data-line-numbers="" class="fragment fade-in">[ 1 2 3 4 5 ]</code></pre>
+          </section>
+          <section>
+            <h3>Funktionen</h3>
+            <h4>Simples Lambda</h4>
+            <pre><code data-line-numbers="1|2|3">let 
+  inc = x: x + 1;
+in (inc (inc 1))
+						</code></pre>
+            <pre><code data-line-numbers="" class="fragment fade-in">3</code></pre>
+            <h4>Weiteres Lambda</h4>
+            <pre><code data-line-numbers="1|2|3" class="fragment fade-in">let 
+  sum = x: y: x + y;
+in (sum 1 3)
+						</code></pre>
+            <pre><code data-line-numbers="" class="fragment fade-in">4</code></pre>
+          </section>
+          <section>
+            <h3>Named Funktionen</h3>
+            <pre><code>let sum = { x, y }: x + y;
+in sum {x = 12; y = 32;}</code></pre>
+            <pre><code data-line-numbers="" class="fragment fade-in">44</code></pre>
+            <pre class="fragment"><code>let sum = { x, y ? 1, ... }: x + y;
+in sum { x = 32; z = 12;}</code></pre>
+            <pre><code data-line-numbers="" class="fragment fade-in">33</code></pre>
+          </section>
+          <section>
+            <h3>Wir schreiben unser erster Paket</h3>
+            <pre><code>package main // helloWorld.go
+import "fmt"
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
-			Reveal.initialize({
-				hash: true,
+func main() { fmt.Println("Hallo") }</code></pre>
+            <pre><code class="nix fragment" data-line-numbers="2|3-14|4|5|6|7-9|10-13"># default.nix
+with import &lt;nixpkgs&gt; {};
+stdenv.mkDerivation {
+  name = "helloWorld Golang";
+  src = ./.;
+  buildInputs = [ pkgs.go ];
+  buildPhase = ''
+    go build helloWorld.go - helloWorld
+  '';
+  installPhase = ''
+    mkdir -p $out/bin
+    cp helloWorld $out/bin/helloWorld
+  '';
+}</code></pre>
+<pre><code class="nix fragment">nix-build . </code></pre>
+          </section>
+          <section>
+            <h3>Was ist eigentlich diese Nixpkgs?</h3>
+            <ul>
+              <li class="fragment">Quasi STD-Lib von NixOs. Auch in Nix-Lang</li>
+              <li class="fragment">Mono-Repo, die alles enthält:</li>
+                <ul>
+                  <li class="fragment">Pakete</li>
+                  <li class="fragment">Services</li>
+                  <li class="fragment">Funktionen zum Bauen von Paketen</li>
+                  <li class="fragment">
+                    Funktionen zum Bauen des Betriebssystems
+                  </li>
+                </ul>
+              </li>
+              <li class="fragment">
+                <a
+                  href="https://github.com/NixOS/nixpkgs/blob/master/pkgs/stdenv/generic/make-derivation.nix"
+                  >mkDerivation Funktion</a
+                >
+              </li>
+              <li class="fragment">
+                <a
+                  href="https://github.com/NixOS/nixpkgs/blob/nixos-22.11/pkgs/development/compilers/go/1.19.nix#L175"
+                  >Das GO-Paket</a
+                >
+              </li>
+              <li class="fragment"><a href="https://search.nixos.org/packages">Packages Suche</a></li>
+            </ul>
+          </section>
+          <section>
+            <h3>Wieso ist dann nicht langsam?</h3>
+            <ul>
+              <li>Caching!</li>
+              <li>Wir kennen den Hash, können also alles cachen</li>
+              <li>Dicker Binary Cache</li>
+            </ul>
+          </section>
+          <section>
+            <h3>Power von Nix Packagemanager</h3>
+            <ul>
+              <li class="fragment">Batteries included: Bringt alle Libraries, wie libc, selber mit</li>
+              <li class="fragment">Unabhängig von NixOS</li>
+              <li class="fragment">Funktioniert auf fast allen Linux-Distros und Mac</li>
+              <pre class="fragment"><code class="bash">$ sh <(curl -L https://nixos.org/nix/install) --daemon</code></pre>
+            </ul>
+          </section>
+          <section>
+            <h3>nix-Shell</h3>
+              <pre><code class="bash">$ nix-shell -p firefox
+$ firefox</code></pre>
+              Erzeugt eine Bash-Shell in der das Nix-Package <code>firefox</code>. Fügt Firefox in <code>$PATH</code> hinzu.
+          </section>
+          <section>
+            <h3>nix-env</h3>
+              Tool zum manipulieren von Nix Env
+              <pre><code class="bash">$ nix-env -i firefox
+$ firefox</code></pre>
+              Installiert das Nix-Package <code>firefox</code>.
+              Jede Veränderung erzeugt eine neue Generation: Man kann zu jeder vorherigen zurück springen
+          </section>
+        </section>
+        <section>
+          <h1>NixOS</h1>
+          <ul>
+            <li>Können wir nicht auch genauso Betriebssystem verwalten?</li>
+            <li>System wäre determinitisch, zurück setzbar, etc.</li>
+            <li>JA!</li>
+            <li>Ein Paket: Unser System representiert</li>
+            <li>In dem Paket <code>/etc</code>, <code>/bin</code>, <code>/lib</code>, Kernel, Systemd Units, sym-links zu allen anderen Pakete, die bei boot gemounted werden</li>
+          </ul>
+        </section>
+        <section>
+          <ul>
+            <li>Funktion, die ein Set übergeben bekommt</li>
+            <li>Funktion baut daraus das Systempaket</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Unsere erste NixOS-Configuration</h3>
+          Ein System besteht aus mehrern Modulen. Alle Module werde von dem
+          Build-System aufgerufen. Ein Modul ist eine Funktion. Nix baut unser
+          System entsprechend des Ergebnis der Funktion
+          <pre><code class="nix">{ pkgs, ... }: {
+    imports = [
+      ./hardware-configuration.nix
+    ];
+    boot.loader.systemd-boot.enable = true; # (for UEFI systems only)
+    services.sshd.enable = true;
+}</code></pre>
+          <ul>
+            <li>
+              Funktionen geben ein Set zurück, dass die Informationen über das
+              System enthält.
+            </li>
+          </ul>
+        </section>
+      </div>
+    </div>
 
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
-		</script>
-	</body>
+    <script src="dist/reveal.js"></script>
+    <script src="plugin/notes/notes.js"></script>
+    <script src="plugin/markdown/markdown.js"></script>
+    <script src="plugin/highlight/highlight.js"></script>
+    <script>
+      // More info about initialization & config:
+      // - https://revealjs.com/initialization/
+      // - https://revealjs.com/config/
+      Reveal.initialize({
+        hash: true,
+
+        // Learn about plugins: https://revealjs.com/plugins/
+        plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+      });
+    </script>
+  </body>
 </html>
